@@ -1,6 +1,7 @@
 18 Oct 2011: Wouter
 	- Manpage fixes
 	- can build outside of sourcedir.
+	- libappindicator support, for Ubuntu Unity desktop GUI.
 
 17 Oct 2011: Wouter
 	- Fix insecure mode after dnstcp443 has been probed.
